--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   firebase_core: ^1.17.0
   cloud_firestore: ^3.1.16
   firebase_auth: ^3.3.19
+  image_picker: ^0.8.5+3
+  firebase_storage: ^10.2.17
+  firebase_messaging: ^11.4.1
+ 
 
 
 dev_dependencies:
